--- a/production/settings.ui
+++ b/production/settings.ui
@@ -28,35 +28,6 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="QGroupBox" name="R_groupBox">
-         <property name="title">
-          <string>R</string>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout">
-          <item>
-           <widget class="QScrollArea" name="R_scrollArea">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="R_scrollAreaWidgetContents">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>339</width>
-               <height>99</height>
-              </rect>
-             </property>
-            </widget>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QSpinBox" name="N_spinBox"/>
-       </item>
        <item row="4" column="0">
         <widget class="QGroupBox" name="actions_groupBox">
          <property name="title">
@@ -72,8 +43,8 @@
              <property name="geometry">
               <rect>
                <x>0</x>
-               <y>-62</y>
-               <width>325</width>
+               <y>0</y>
+               <width>506</width>
                <height>219</height>
               </rect>
              </property>
@@ -130,12 +101,41 @@
          </layout>
         </widget>
        </item>
+       <item row="3" column="0">
+        <widget class="QGroupBox" name="R_groupBox">
+         <property name="title">
+          <string>R</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <widget class="QScrollArea" name="R_scrollArea">
+            <property name="widgetResizable">
+             <bool>true</bool>
+            </property>
+            <widget class="QWidget" name="R_scrollAreaWidgetContents">
+             <property name="geometry">
+              <rect>
+               <x>0</x>
+               <y>0</y>
+               <width>520</width>
+               <height>68</height>
+              </rect>
+             </property>
+            </widget>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
        <item row="2" column="0">
         <widget class="QLabel" name="Xn_label">
          <property name="text">
           <string>Xn = {}</string>
          </property>
         </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QSpinBox" name="N_spinBox"/>
        </item>
        <item row="5" column="0">
         <widget class="QPushButton" name="runClosures_pushButton">
@@ -147,7 +147,7 @@
       </layout>
      </widget>
     </item>
-    <item row="0" column="1">
+    <item row="1" column="0" colspan="2">
      <widget class="QGroupBox" name="log_groupBox">
       <property name="title">
        <string>LOG</string>
@@ -163,11 +163,34 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>363</width>
-            <height>461</height>
+            <width>758</width>
+            <height>68</height>
            </rect>
           </property>
          </widget>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QGroupBox" name="groupBox">
+      <property name="title">
+       <string>MODAL FORMULAS</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="0">
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>PushButton</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QPushButton" name="pushButton_2">
+         <property name="text">
+          <string>PushButton</string>
+         </property>
         </widget>
        </item>
       </layout>
