--- a/production/settings.ui
+++ b/production/settings.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>532</width>
-    <height>525</height>
+    <height>594</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,7 +42,7 @@
       </item>
       <item>
        <property name="text">
-        <string>MODAL FORMULAE</string>
+        <string>MODAL FORMULAS</string>
        </property>
       </item>
       <item>
@@ -166,7 +166,7 @@
            </size>
           </property>
           <property name="text">
-           <string>N</string>
+           <string>n</string>
           </property>
          </widget>
         </item>
@@ -215,53 +215,12 @@
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>0</y>
+                <y>-138</y>
                 <width>280</width>
-                <height>557</height>
+                <height>549</height>
                </rect>
               </property>
               <layout class="QGridLayout" name="gridLayout_11">
-               <item row="1" column="0">
-                <widget class="QPushButton" name="false_pushButton">
-                 <property name="text">
-                  <string>⊥</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="0" colspan="3">
-                <widget class="QLabel" name="s_label">
-                 <property name="text">
-                  <string>Enter s ∈ A ∗</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="1">
-                <widget class="QPushButton" name="diamond_pushButton">
-                 <property name="text">
-                  <string> ◇ </string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="2">
-                <widget class="QPushButton" name="arrow_pushButton">
-                 <property name="text">
-                  <string>--&gt;</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="7" column="0" colspan="3">
-                <widget class="QLineEdit" name="formula_lineEdit"/>
-               </item>
-               <item row="8" column="0" colspan="3">
-                <widget class="QRadioButton" name="subformulas_radioButton">
-                 <property name="text">
-                  <string>Find subformulas of s</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="10" column="0" colspan="3">
-                <widget class="QSpinBox" name="nFormula_spinBox"/>
-               </item>
                <item row="11" column="0" colspan="3">
                 <widget class="QGroupBox" name="RFormula_groupBox">
                  <property name="title">
@@ -286,20 +245,6 @@
                    </widget>
                   </item>
                  </layout>
-                </widget>
-               </item>
-               <item row="9" column="0" colspan="3">
-                <widget class="QLabel" name="nFormula_label">
-                 <property name="text">
-                  <string>N</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="12" column="0" colspan="3">
-                <widget class="QRadioButton" name="sValid_radioButton">
-                 <property name="text">
-                  <string>Is s valid in (Xn , R)</string>
-                 </property>
                 </widget>
                </item>
                <item row="13" column="0" colspan="3">
@@ -328,21 +273,79 @@
                  </layout>
                 </widget>
                </item>
-               <item row="14" column="0" colspan="3">
+               <item row="12" column="0" colspan="3">
+                <widget class="QRadioButton" name="sValid_radioButton">
+                 <property name="text">
+                  <string>Is s valid in (Xn , R)</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="0" colspan="3">
+                <widget class="QLabel" name="s_label">
+                 <property name="text">
+                  <string>Enter s ∈ A ∗</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="8" column="0" colspan="3">
+                <widget class="QRadioButton" name="subformulas_radioButton">
+                 <property name="text">
+                  <string>Find subformulas of s</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="1">
+                <widget class="QPushButton" name="diamond_pushButton">
+                 <property name="text">
+                  <string> ◇ </string>
+                 </property>
+                </widget>
+               </item>
+               <item row="14" column="0">
+                <widget class="QRadioButton" name="findX_radioButton">
+                 <property name="text">
+                  <string/>
+                 </property>
+                </widget>
+               </item>
+               <item row="9" column="0" colspan="3">
+                <widget class="QLabel" name="nFormula_label">
+                 <property name="text">
+                  <string>n</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="7" column="0" colspan="3">
+                <widget class="QLineEdit" name="formula_lineEdit"/>
+               </item>
+               <item row="1" column="2">
+                <widget class="QPushButton" name="arrow_pushButton">
+                 <property name="text">
+                  <string>--&gt;</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="10" column="0" colspan="3">
+                <widget class="QSpinBox" name="nFormula_spinBox"/>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="false_pushButton">
+                 <property name="text">
+                  <string>⊥</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="15" column="0" colspan="3">
                 <widget class="QTextBrowser" name="findX_textBrowser">
+                 <property name="styleSheet">
+                  <string notr="true">background-color: rgba(255, 255, 255, 0)</string>
+                 </property>
                  <property name="html">
                   <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Find set of points x in Xn such that M, x ⊨ s, where the valuation of pi in M is Vi.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="15" column="0" colspan="3">
-                <widget class="QRadioButton" name="findX_radioButton">
-                 <property name="text">
-                  <string>Find</string>
                  </property>
                 </widget>
                </item>
@@ -673,9 +676,6 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
    </layout>
-   <zorder>log_groupBox</zorder>
-   <zorder>query_comboBox</zorder>
-   <zorder>query_stackedWidget</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
